--- a/stat-301_final_report.ipynb
+++ b/stat-301_final_report.ipynb
@@ -904,6 +904,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c951f8c-87c5-465c-9c80-04ef94c8b809",
+   "metadata": {},
+   "source": [
+    "**Figure 6. Estimated Coefficients of an Additive Multiple Linear Regression Model**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3be2c16a-873e-4b1e-b76c-34085a7d71bf",
    "metadata": {},
    "source": [
@@ -1311,11 +1319,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ab0712a-b2a3-47fe-826c-0c69a408805f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**Figure 7. RMSE of LASSO reduced model**"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "586c59a3-9565-47d2-a1c1-0b4c38735eca",
    "metadata": {},
    "source": [
-    "**Figure 6. Estimated Coefficients of an Additive Multiple Linear Regression Model**\n",
     "\n",
     "### Methods\n",
     "\n",
