--- a/stat-301_final_report.ipynb
+++ b/stat-301_final_report.ipynb
@@ -1127,7 +1127,7 @@
    "id": "e4bcf471-e1d9-4759-923c-ba21eea91b72",
    "metadata": {},
    "source": [
-    "With this full addictive model, let's further check the assumption of normality and whether heteroscedasticity exsits in the dataset which means the errors do not have equal variance, we will diagose graphically by checking the QQ plot and comparing the fitted values to the residuals."
+    "With this full addictive model, let's further check the assumption of normality and whether heteroscedasticity exists in the dataset which means the errors do not have equal variance, we will diagose graphically by checking the QQ plot and comparing the fitted values to the residuals."
    ]
   },
   {
@@ -1484,10 +1484,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "986fd8a6-f851-41f5-85a2-74cd2a53df33",
+   "metadata": {},
+   "source": [
+    "**Figure 9. Forward Selection Results**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd205f4e-cd99-46ef-9521-1f8d83ca14f9",
    "metadata": {},
    "source": [
-    "For the purpose of create a \"best\" predictive model we will looking for the smallest Cp value. Thus, we select the predictive model with 8 variables.\n",
+    "For the purpose of create a \"best\" predictive model we will looking for the smallest $C_p$ value. Thus, we select the predictive model with 8 variables.\n",
     "\n",
     "The variables we selected are:\n",
     "1. \"ReleaseDate\" 2. \"RecommendationCount\" 3. \"GenreIsAction\" 4. \"GenreIsRPG\" 5. \"GenreIsSimulation\" \n",
@@ -1622,6 +1630,14 @@
     "            )\n",
     "            )\n",
     "      )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27174453-68df-4418-a09b-9a533bf87bd4",
+   "metadata": {},
+   "source": [
+    "**Figure 10. Reduced Model, Full Additive Model**"
    ]
   },
   {
@@ -1855,7 +1871,7 @@
    "id": "cd6f9323-4ce1-4890-8822-0a6d5f37d2dd",
    "metadata": {},
    "source": [
-    "**Figure 9. Lambda Selection Plot, LASSO**"
+    "**Figure 11. Lambda Selection Plot, LASSO**"
    ]
   },
   {
@@ -2000,7 +2016,7 @@
    "id": "ed909bd5-b256-4450-a02d-dbcfc1acd22c",
    "metadata": {},
    "source": [
-    "**Figure 7. RMSE of LASSO selected model and Full Additive Linear Regression**"
+    "**Figure 12. RMSE of LASSO Selected model, Reduced Model, and Full Additive Linear Regression**"
    ]
   },
   {
@@ -2019,15 +2035,18 @@
     "\n",
     "### Discussion\n",
     "\n",
-    "This report uses a dataset with huge sample of 12624 games and 19 variables. Once filtered to remove observations with missing values, the sample size became more reasonable, at around 2000. \n",
+    "This report uses a large dataset of 12624 games and 19 variables. Once filtered to remove observations with missing values, the sample size became more reasonable, at around 2000.\n",
+    "Wrangling was done to make variables easier to use in our model. The ReleaseDate variable was converted from a character format to a continuous variable. All of the logical variables representing a game's genre or category were converted to a factor so that our models could use them.\n",
     "\n",
-    "Wrangling was done to make variables easier to use in our model. The `ReleaseDate` variable was converted from a character format to a continuous variable. All of the logical variables representing a game's genre or category were converted to a factor so that our models could use them. \n",
+    "The report uses scatterplots and tables to visualize and summarize the data and the relationships between variables. It also fits an additive multiple linear regression model using all of the variables in the dataset. \n",
     "\n",
-    "The report uses scatterplots and tables to visualize and summarize the data and the relationships between variables. It also fits an additive multiple linear regression model using all of the variables in the dataset. However, more must be done in the final report. In particular, we will need to employ model selection techniques to answer our inferential questions and figure out which variables are relevant. To answer our predictive questions we will also need to evaluate our models using metrics such the **MSE** (Mean Squared Error). \n",
+    "Now, we will discuss assumptions. We used the variance inflation factor (VIF) to check multicollinearity. Since the VIF for all of the variables was fairly close to 1 (no higher than 1.5), we concluded that multicollinearity would not be a significant problem. Next, we used a Q-Q plot and a residuals vs. fitted values plato to confirm that assumptions of normality of the error terms, and a consistent variance (homoscedasticity) were held. We could not conclusively confirm the linearity of the relationship of the response and input variables, and this is a potential flaw in our model. \n",
     "\n",
+    "Next, we constructed a full linear regression model, using all of the variables. For comparison, and to simplify the model, we then used forward selection to select the variables. For the reduced model, we chose a model with 8 input variables, according to Mallow’s $C_p$, which estimates predictive performance. Finally, for additional comparison we also experimented with LASSO selection and penalization. However, our LASSO model did not select any of the variables and used an intercept-only model. We are not too sure why, but it may have something to do with having lots of categorical variables. We could explore this more in the future. \n",
     "\n",
-    "If we are able to successfully create a predictive model for Metacritic scores, consumers could use this model to easily make a decision about their gaming purchase based on some input variables. Additionally, statistical analysis of this dataset will allow us to understand the relationship between Metacritic scores and other properties of a game. \n",
-    "\n"
+    "After computing the root mean squared error (RMSE) of our 3 models using the test set, our results show that the reduced model that was made with forward selection performed the best. All 3 models had similar performance, however, with RMSE values between 10.5 - 11. \n",
+    "\n",
+    "This model may be useful for consumers in helping them make decisions about their gaming purchases, when Metacritic scores are unavailable and they need to use some other data. And sellers could potentially use our model to see if a future game will have a favorable rating, and if it is worth investing in and creating a game. "
    ]
   },
   {
